// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPassword component: ResetPasswordRenderer renders when no error or success message 1`] = `
<Component
  style={
    Object {
      "flex": 1,
      "padding": 20,
    }
  }
>
  <Component>
    Reset your password
  </Component>
  <Component
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <Component
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Email:
    </Component>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoFocus={true}
      onChangeText={[Function]}
      style={
        Object {
          "borderColor": "grey",
          "borderWidth": 1,
          "fontSize": 16,
        }
      }
      underlineColorAndroid="transparent"
      value="test@exmaple.com"
    />
  </Component>
  <Button
    onPress={[Function]}
    title="Send Email"
  />
  <Button
    onPress={[Function]}
    title="Back To Sign In"
  />
</Component>
`;

exports[`ResetPassword component: ResetPasswordRenderer renders when success message, no error 1`] = `
<Component
  style={
    Object {
      "flex": 1,
      "padding": 20,
    }
  }
>
  <Component>
    Check your inbox for an email.
  </Component>
  <Component>
    Reset your password
  </Component>
  <Component
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <Component
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Email:
    </Component>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoFocus={true}
      onChangeText={[Function]}
      style={
        Object {
          "borderColor": "grey",
          "borderWidth": 1,
          "fontSize": 16,
        }
      }
      underlineColorAndroid="transparent"
      value="test@exmaple.com"
    />
  </Component>
  <Button
    onPress={[Function]}
    title="Send Email"
  />
  <Button
    onPress={[Function]}
    title="Back To Sign In"
  />
</Component>
`;

exports[`ResetPassword component: ResetPasswordRenderer renders with both error and success message 1`] = `
<Component
  style={
    Object {
      "flex": 1,
      "padding": 20,
    }
  }
>
  <Component>
    Some error occurred
  </Component>
  <Component>
    Reset your password
  </Component>
  <Component
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <Component
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Email:
    </Component>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoFocus={true}
      onChangeText={[Function]}
      style={
        Object {
          "borderColor": "grey",
          "borderWidth": 1,
          "fontSize": 16,
        }
      }
      underlineColorAndroid="transparent"
      value="test@exmaple.com"
    />
  </Component>
  <Button
    onPress={[Function]}
    title="Send Email"
  />
  <Button
    onPress={[Function]}
    title="Back To Sign In"
  />
</Component>
`;

exports[`ResetPassword component: ResetPasswordRenderer renders with error message, no success message 1`] = `
<Component
  style={
    Object {
      "flex": 1,
      "padding": 20,
    }
  }
>
  <Component>
    Some error occurred
  </Component>
  <Component>
    Reset your password
  </Component>
  <Component
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <Component
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Email:
    </Component>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoFocus={true}
      onChangeText={[Function]}
      style={
        Object {
          "borderColor": "grey",
          "borderWidth": 1,
          "fontSize": 16,
        }
      }
      underlineColorAndroid="transparent"
      value="test@exmaple.com"
    />
  </Component>
  <Button
    onPress={[Function]}
    title="Send Email"
  />
  <Button
    onPress={[Function]}
    title="Back To Sign In"
  />
</Component>
`;

exports[`ResetPassword component: Should render 1`] = `
<ResetPassword
  email=""
  error={null}
  handleChangeText={[Function]}
  handleSendPasswordResetEmail={[Function]}
  successMessage={null}
/>
`;
